
Changelog
=========

4.2.0 (unreleased)
------------------

- Fix and rework dossier deactivation and activation.
  [phgross]

- Add initial meeting support.
    - Add Proposal content type (proxies) and model.
    - Add feature flag, disable meeting feature by default.
    - Add Committee content type (proxy) and model.
    - Add custom forms to create/edit proxy-supported entities.
    - Add custom workflow implementation (no plone workflow).
    - Add a context manager to temporarily change the security context.
    - Add meeting model and forms.
    - Add schedule meeting action to committee.
    - Add scheduling of proposals as agenda items.
    - Add better committee page displaying meetings and submitted proposals.
    - Add custom content-views viewlet to display correct edit links for models.
    - Add custom pathbar viewlet which can display sql-models.
    - Add paragraph and custom text agenda items.
    - Make agenda items deletable.

  [deiferni]

- Dossier workflow: Also allow Administrator role to activate deactivated
  dossiers.
  [lgraf]

- OrgUnitSelector: Fix fallback logic:

  Build intersection of current admin units' org units and
  user's org units. If some of the user's org units are in the
  current admin unit, use the first of those as the fallback.

  Otherwise we're in an inter-admin unit operation, default to
  current admin unit's first org unit.
  [lgraf]

- CookieStorage: Extend max age of cookies to 30 days (was
  "end of browser session" before).
  [lgraf]

- OrgUnitSelector: Store selected OrgUnit after determining fallback.
  [lgraf]


4.1.0 (2014-12-18)
------------------

- Made the AddPublicTrialColumn more robust.
  [phgross]

- Dropped no longer used document state journalization.
  [phgross]

- Disable docproperty updating in YearfolderStorer process.
  [phgross]

- Improved repository deletion (it's now possible without folder_contents view):
    - Revoke list folder contents permission on repository.